# vehicle-search

./: .gitignore  README.md  build-deb.sh  build-project.sh  build-wheelhouse.sh  config.toml  install-project.sh  install-system.sh  pyproject.toml  uninstall-system.sh
debian/: changelog  control  files  rules
src/vehicle_search/: cli.py  config.py  file_read.py
src/vehicle_search/rest/: find.py
tests/: test_cli.py
tests/rest/: test_find.py
