[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vehicle-search"
version = "0.1.0"
description = "A command-line tool for ..."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Your Team" }
]
dependencies = [
    "click>=8.4.2",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[project.scripts]
vehicle-search = "vehicle_search.cli:app"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "poethepoet",
  "ty>=0.0.56",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vehicle_search"]

[tool.poe.tasks]
test = "pytest"
cov = "pytest --cov-config=pyproject.toml --cov=src --cov-report=html:reports/html --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
check = ["lint", "test"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle / PEP 8 style issues
  "F",   # Pyflakes
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # modern Python upgrades
]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/vehicle_search"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
